add useEffect so background color of home page doesnt affect other pages such as admin

--- a/src/components/User/UserInput.scss
+++ b/src/components/User/UserInput.scss
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
 
+.home-background {
+  background-color: #f59068;
+}
+
 main {
   background-color: #f59068;
 }
