--- a/src/components/User/UserMenu.scss
+++ b/src/components/User/UserMenu.scss
@@ -4,14 +4,32 @@
 }
 
 .user-menu-item {
+  display: flex;
   flex: 1;
   margin: 1rem;
   padding: 2rem;
   background-color: rgb(246, 246, 246);
   border-radius: 20px;
+  justify-content: space-between;
 }
 
 .item-info {
   display: flex;
+  flex-direction: column;
+  margin: 1em 4em 1rem 1rem;
+}
+
+.item-option {
+  display: flex;
   justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+}
+
+.add-item {
+  border-radius: 50%;
+  color: #f59068;
+  border-color: #f59068;
+  height: 2rem;
+  width: 2rem;
 }
