--- a/src/components/User/UserInput.scss
+++ b/src/components/User/UserInput.scss
@@ -1,19 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
 
-.home-background {
-  background-color: #f59068;
+body {
+  height: 100vh;
 }
 
-main {
-  background-color: #f59068;
+.home-background {
+  background: rgb(245, 144, 104);
+  background: linear-gradient(55deg, rgba(245, 144, 104, 1) 0%, rgba(250, 130, 34, 1) 36%, rgba(251, 123, 79, 0.9542410714285714) 64%, rgba(252, 69, 136, 0.9346332282913166) 100%);
 }
 
 .welcome {
   font-family: 'Kalam', cursive;
   color: white;
-  font-size: 40px;
+  font-size: 45px;
   text-align: center;
-  margin-top: 2em;
+  margin-top: .75em;
   margin-bottom: 10px;
 }
 
@@ -24,31 +25,49 @@ main {
 }
 
 section {
-  width: 60%;
-  border: solid;
-  border-color: whitesmoke;
-  border-width: 10px;
-  border-radius: 10px;
-  padding: 3em 1em 3em 1em;
+  width: 70%;
   text-align: center;
   margin: auto;
-  margin-top: 8em;
+  margin-top: 2em;
 }
 
 .input-field {
-  background-color: whitesmoke;
   padding: 4em 1em 2em 1em;
-  border-radius: 10px;
+  height: 100%;
+  width: 100%;
+  height: 400px;
+  background: rgba(254, 254, 254, 0.209);
+  border: 1px solid #fff;
+  border-top-left-radius: 40px;
+  border-bottom-right-radius: 40px;
+  z-index: -1;
 }
+
 
 input {
   border-radius: 20px;
-  border: 10px solid white;
-  background-color: whitesmoke;
+  border: 1px solid white;
+  background: rgba(254, 254, 254, 0.209);
+  background: linear-gradient(55deg, rgba(253, 252, 252, 0.644) 0%, rgba(254, 254, 254, 0.128) 92%);
   margin-bottom: 2em;
 }
 
+.form-control::placeholder {
+  color: white;
+}
+
+
 form input {
-  font-size: 1em;
+  font-size: 1.5em;
+  color: white;
   padding: 10px;
 }
+
+.logo {
+  position: relative;
+  width: 160px;
+  height: 160px;
+  z-index: -1;
+  margin: -20px 0 -90px -5px;
+}
+
