--- a/src/components/Admin/AdminNav.scss
+++ b/src/components/Admin/AdminNav.scss
@@ -1,10 +1,11 @@
 .admin-nav {
+  background: rgb(245, 144, 104);
+  background: linear-gradient(55deg, rgba(245, 144, 104, 1) 0%, rgba(250, 130, 34, 1) 36%, rgba(251, 123, 79, 0.9542410714285714) 64%, rgba(252, 69, 136, 0.9346332282913166) 100%);
   display: flex;
   flex-direction: row;
   justify-content:space-between;
   width: 100%;
   height: 5rem;
-  background-color: #f59068;
   color: white;
   padding: 1rem;
 }
