add react-bootstrap package

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,13 @@
 
 @import "styles/typography.scss";
 
+// Import Bootstrap variables
+@import "~bootstrap/scss/variables";
+
+// Import Bootstrap styles
+@import "~bootstrap/scss/bootstrap";
+
+
 * {
   box-sizing: border-box;
 }
