--- a/src/index.scss
+++ b/src/index.scss
@@ -7,11 +7,11 @@
 
 @import "styles/typography.scss";
 
-// Import Bootstrap variables
-@import "~bootstrap/scss/variables";
+// // Import Bootstrap variables
+// @import "~bootstrap/scss/variables";
 
-// Import Bootstrap styles
-@import "~bootstrap/scss/bootstrap";
+// // Import Bootstrap styles
+// @import "~bootstrap/scss/bootstrap";
 
 
 * {
