--- a/src/components/User/UserMenu.scss
+++ b/src/components/User/UserMenu.scss
@@ -1,58 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500&display=swap');
 
-
-.user-menu {
-  display: flex;
-  flex-direction: column;
-}
-
-.menu-list {
-  font-family: 'Noto Sans JP', sans-serif;
-  display: flex;
-  display: row;
-  justify-content: space-around;
-}
-
-.user-menu-item {
-  font-family: 'Noto Sans JP', sans-serif;
-  display: flex;
-  flex: 1;
-  margin: 1rem;
-  padding: 1rem;
-  background-color: rgb(246, 246, 246);
-  border-radius: 20px;
-  justify-content: space-between;
-}
-
-.item-info {
-  display: flex;
-  flex-direction: column;
-  margin: 1em 4em 1rem 1rem;
-}
-
-.item-option {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  align-items: center;
-}
-
-.add-item {
-  border-radius: 50%;
-  color: #f59068;
-  border-color: #f59068;
-  height: 2rem;
-  width: 2rem;
-  margin-bottom: 2em;
-}
-
-img {
-  height: 10em;
-  width: 10em;
-  border-radius: 10px;
-  object-fit: cover;
-}
-
+// menu category buttons at top
 .menu-btns {
   display: flex;
   overflow-x: scroll;
@@ -80,12 +28,21 @@ img {
   margin-bottom: 1em;
 }
 
+//menu category titles
 .menu-categ {
   margin: 1.5rem;
   font-family: 'Noto Sans JP', sans-serif;
   text-transform: uppercase;
 }
 
+.menu-list {
+  font-family: 'Noto Sans JP', sans-serif;
+  display: flex;
+  display: row;
+  justify-content: space-around;
+}
+
+//menu items 
 .item-name {
   margin-top: .5em;
   margin-bottom: .5em;
@@ -94,9 +51,63 @@ img {
   font-size: 18px;
 }
 
+// .user-menu {
+//   display: flex;
+//   flex-direction: column;
+// }
+
+.user-menu-item {
+  font-family: 'Noto Sans JP', sans-serif;
+  display: flex;
+  flex: 1;
+  margin: 1rem;
+  padding: 1rem;
+  background-color: rgb(246, 246, 246);
+  border-radius: 20px;
+  justify-content: space-between;
+}
+
+.item-info {
+  display: flex;
+  flex-direction: column;
+  margin: 1em 4em 1rem 1rem;
+}
+
+.item-option {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+}
+
+img {
+  height: 10em;
+  width: 10em;
+  border-radius: 10px;
+  object-fit: cover;
+}
+
+//add to cart and price
 .menu-price {
   display: flex;
   margin-top: 7.75em;
   margin-bottom: .5em;
   font-size: 18px;
+}
+
+.add-item {
+  border-radius: 50%;
+  color: #f59068;
+  border-color: #f59068;
+  height: 2rem;
+  width: 2rem;
+  margin-bottom: .5em;
+}
+
+.menu-cart {
+  color: black;
+  position: relative;
+  text-align: center;
+  white-space: nowrap;
+  margin-bottom: .25em;
 }
