--- a/src/components/User/UserMenu.scss
+++ b/src/components/User/UserMenu.scss
@@ -12,6 +12,13 @@
   text-decoration: none;
 }
 
+.menu-btns {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
+
 .menu-btns ul {
   list-style-type: none;
   margin: 15px;
@@ -25,7 +32,6 @@
   border: 2px solid #f59068;
   background-color: white;
   border-radius: 20px;
-  margin-bottom: 1em;
 }
 
 //menu category titles
@@ -33,7 +39,15 @@
   margin: 1.5rem;
   font-family: 'Noto Sans JP', sans-serif;
   text-transform: uppercase;
+  padding-top: 90px;
 }
+
+.menu-categ:first-child {
+  padding-top: 0;
+}
+
+
+
 
 .menu-list {
   font-family: 'Noto Sans JP', sans-serif;
@@ -50,11 +64,6 @@
   text-transform: uppercase;
   font-size: 18px;
 }
-
-// .user-menu {
-//   display: flex;
-//   flex-direction: column;
-// }
 
 .user-menu-item {
   font-family: 'Noto Sans JP', sans-serif;
