--- a/src/components/User/UserMenu.scss
+++ b/src/components/User/UserMenu.scss
@@ -12,17 +12,22 @@
   text-decoration: none;
 }
 
+.menu-btns::-webkit-scrollbar {
+  display: none;
+}
+
 .menu-btns {
   position: sticky;
   top: 0;
   z-index: 1;
 }
 
-
 .menu-btns ul {
   list-style-type: none;
   margin: 15px;
-  padding: 0;
+  padding-bottom: 10px;
+  background-color: white;
+  margin-bottom: 0;
 }
 
 .menu-btns li {
@@ -39,15 +44,12 @@
   margin: 1.5rem;
   font-family: 'Noto Sans JP', sans-serif;
   text-transform: uppercase;
-  padding-top: 90px;
+  padding-top: 70px;
 }
 
 .menu-categ:first-child {
-  padding-top: 0;
+  padding-top: 65px;
 }
-
-
-
 
 .menu-list {
   font-family: 'Noto Sans JP', sans-serif;
