--- a/src/components/User/UserInput.scss
+++ b/src/components/User/UserInput.scss
@@ -52,10 +52,11 @@ input {
   margin-bottom: 2em;
 }
 
-.form-control::placeholder {
+.name-field::placeholder,
+.table-field::placeholder,
+.ph-field::placeholder {
   color: white;
 }
-
 
 form input {
   font-size: 1.5em;
@@ -68,6 +69,6 @@ form input {
   width: 160px;
   height: 160px;
   z-index: -1;
-  margin: -20px 0 -90px -5px;
+  margin: -20px 0px -90px 0px;
 }
 
