--- a/src/components/User/UserMenu.scss
+++ b/src/components/User/UserMenu.scss
@@ -22,6 +22,10 @@
   z-index: 1;
 }
 
+.menu-btns:hover {
+  color: #f59068;
+}
+
 .menu-btns ul {
   list-style-type: none;
   margin: 15px;
@@ -72,7 +76,7 @@
   display: flex;
   flex: 1;
   margin: 1rem;
-  padding: 1rem;
+  // padding: 1rem;
   background-color: rgb(246, 246, 246);
   border-radius: 20px;
   justify-content: space-between;
@@ -102,7 +106,6 @@ img {
 .menu-price {
   display: flex;
   margin-top: 7.75em;
-  margin-bottom: .5em;
   font-size: 18px;
 }
 
@@ -112,7 +115,9 @@ img {
   border-color: #f59068;
   height: 2rem;
   width: 2rem;
-  margin-bottom: .5em;
+  margin-bottom: 2em;
+  display: flex;
+  align-items: center;
 }
 
 .menu-cart {
@@ -121,4 +126,49 @@ img {
   text-align: center;
   white-space: nowrap;
   margin-bottom: .25em;
+  margin-top: -2.5em;
+  padding: 1em;
 }
+
+.btn-cart {
+  position: fixed;
+  bottom: 15px;
+  right: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  border: 4px solid #f59068;
+  color: #f59068;
+  width: 4em;
+  height: 4em;
+  border-radius: 50%;
+  margin-right: 1em;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 18px;
+  padding-bottom: 0.5em;
+  padding-right: 3px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.cart-count {
+  position: absolute;
+  bottom: -0.8em;
+  left: 1.9em;
+  background-color: #f59068;
+  color: white;
+  border-radius: 50%;
+  width: 2.25em;
+  height: 2.25em;
+  font-size: 1em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.btn-cart:hover {
+  color: #f59068;
+}
+
