--- a/src/components/Cart/UserOrder.scss
+++ b/src/components/Cart/UserOrder.scss
@@ -108,6 +108,10 @@ nav {
   margin-right: .75em;
 }
 
+.count {
+  margin-top: .9em;
+}
+
 .btn-note {
   background: transparent;
   color: #999;
@@ -130,6 +134,10 @@ nav {
   padding: 5px;
   display: flex;
   align-items: center;
+}
+
+.order {
+  text-decoration: none;
 }
 
 .order-total {
