--- a/src/components/User/UserMenu.scss
+++ b/src/components/User/UserMenu.scss
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500&display=swap');
 
+body {
+  height: 100%;
+}
+
+.nav {
+  display: unset;
+}
+
 // menu category buttons at top
 .menu-btns {
   display: flex;
