--- a/src/components/Admin/AdminOrders.scss
+++ b/src/components/Admin/AdminOrders.scss
@@ -19,11 +19,10 @@ body {
 }
 
 
-.admin-orders {
+.all-orders {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-
 }
 
 .admin-order {
@@ -37,6 +36,9 @@ body {
   height: 14em;
 }
 
+.my-modal-title {
+  font-family: 'Noto Sans JP', sans-serif;
+}
 .order-info {
   display: flex;
   justify-content: space-between;
@@ -46,8 +48,12 @@ body {
 
 .order-items {
   display: flex;
-  justify-content: space-evenly;
-  margin: 1rem;
+  justify-content: space-between;
+}
+
+.order-total {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .admin-order-options {
