--- a/src/components/User/UserInput.scss
+++ b/src/components/User/UserInput.scss
@@ -44,7 +44,7 @@ section {
 }
 
 
-input {
+input, .menu-btn {
   border-radius: 20px;
   border: 1px solid white;
   background: rgba(254, 254, 254, 0.209);
@@ -58,7 +58,7 @@ input {
   color: white;
 }
 
-form input {
+form input, .menu-btn {
   font-size: 1.5em;
   color: white;
   padding: 10px;
