--- a/src/components/User/UserMenu.scss
+++ b/src/components/User/UserMenu.scss
@@ -115,14 +115,15 @@ img {
   display: flex;
   margin-top: 7.75em;
   font-size: 18px;
+  margin-left: 1.25em;
 }
 
 .add-item {
-  border-radius: 50%;
+  border-radius: 20px;
   color: #f59068;
   border-color: #f59068;
-  height: 2rem;
-  width: 2rem;
+  height: 2.5rem;
+  width: 5.5rem;
   margin-bottom: 2em;
   display: flex;
   align-items: center;
@@ -145,16 +146,17 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   background-color: white;
   border: 4px solid #f59068;
   color: #f59068;
-  width: 4em;
-  height: 4em;
+  width: 5em;
+  height: 5em;
   border-radius: 50%;
   margin-right: 1em;
   text-decoration: none;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 16px;
   padding-bottom: 0.5em;
   padding-right: 3px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
@@ -162,8 +164,8 @@ img {
 
 .cart-count {
   position: absolute;
-  bottom: -0.8em;
-  left: 1.9em;
+  bottom: -1em;
+  left: 2.5em;
   background-color: #f59068;
   color: white;
   border-radius: 50%;
