--- a/src/components/Admin/AdminNav.scss
+++ b/src/components/Admin/AdminNav.scss
@@ -29,6 +29,8 @@ body {
   border-radius: 30px;
   background-color: transparent;
   color: white;
+  height: 3.5em;
+  width: 5em;
 }
 
 .admin-nav-button:hover {
