--- a/src/components/User/UserMenu.scss
+++ b/src/components/User/UserMenu.scss
@@ -181,3 +181,49 @@ img {
 .btn-cart:hover {
   color: #f59068;
 }
+
+.thanks-msg {
+  position: fixed;
+  background-color: white;
+  padding: 2em;
+  text-align: center;
+  font-size: 20px;
+  width: 15em;
+  top: 30%;
+  left: 10%;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.03);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.back-to-home {
+  position: fixed;
+  top: 65%;
+  left: 22%;
+  border: 2px solid #f59068;
+  border-radius: 5px;
+  background-color: white;
+  color: #f59068;
+  font-size: 1.25rem;
+  font-weight: bold;
+  padding: 0.75rem 3rem;
+  text-align: center;
+}
+
+.back-to-home:hover {
+  color: white;
+  background-color: #f59068;
+}
+
