adjust home page css

--- a/src/components/User/UserInput.scss
+++ b/src/components/User/UserInput.scss
@@ -12,15 +12,15 @@ body {
 .welcome {
   font-family: 'Kalam', cursive;
   color: white;
-  font-size: 45px;
+  font-size: 35px;
   text-align: center;
-  margin-top: .75em;
+  margin-top: 1em;
   margin-bottom: 10px;
 }
 
 .restaurant {
   color: white;
-  font-size: 50px;
+  font-size: 40px;
   text-align: center;
 }
 
