--- a/src/components/Admin/AdminMenu.scss
+++ b/src/components/Admin/AdminMenu.scss
@@ -9,6 +9,16 @@
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);;
 }
 
+:focus {
+  outline: 2px solid #f59068 !important;
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0) !important;
+  background-color: transparent !important;
+}
+
+// .accordion {
+//   border-bottom: 0,5px solid lightgrey;
+// }
+
 
 @media only screen and (min-width: 600px) {
   .admin-menu-item {
