Add new button and stylize how order status displays on orders view for admin

--- a/src/components/Admin/AdminOrders.scss
+++ b/src/components/Admin/AdminOrders.scss
@@ -57,6 +57,8 @@ body {
 .order-status {
   display: flex;
   justify-content: center;
+  font-weight: 700;
+  font-size: larger;
 }
 
 .admin-order-options {
